# docs/swagger.json
@@ -7,9 +7,9 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/v1",
+    "basePath": "/",
     "paths": {
-        "/packet/{id}": {
+        "/api/v1/packets/:id": {
             "get": {
                 "description": "Find packet by ID",
                 "produces": [
@@ -24,7 +24,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.DataPacket"
+                            "$ref": "#/definitions/query.DataPacketView"
                         }
                     },
                     "500": {
@@ -36,7 +36,7 @@
                 }
             }
         },
-        "/packets": {
+        "/api/v1/packets/packets": {
             "get": {
                 "description": "Return packets with max values for the time window [start, end] (Unix ms, UTC).",
                 "consumes": [
@@ -99,20 +99,6 @@
         }
     },
     "definitions": {
-        "entity.DataPacket": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "maxValue": {
-                    "type": "integer"
-                },
-                "timestamp": {
-                    "type": "string"
-                }
-            }
-        },
         "query.DataPacketView": {
             "type": "object",
             "properties": {
